@@ -126,7 +126,12 @@
       for more information on how to build and install the DDS4CCM connector.
     </p>
     <hr>
+    <h3>Android</h3>
+    <p>See <a href="./docs/CIAO_android_port.html">this documentation</a> for more information on how to set up a CIAO android port.
+    </p>
+   <hr>
     <p>Back to the <a href="http://www.cs.wustl.edu/~schmidt/CIAO.html">CIAO</a> home
       page. <!--#include virtual="/~schmidt/cgi-sig.html" --></p>
+    
   </body>
 </html>
