@@ -1,3 +1,9 @@
+Fri Nov  8 12:15:15 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>
+
+        * CIAO-INSTALL.html:
+        * NEWS:
+        Added information about Android port
+
 Mon Nov  4 14:13:28 UTC 2013  Marijke Hengstmengel  <MHengstmengel@remedy.nl>
 
         * docs/CIAO_android_port.html:
